Añadidos iconos en menú y en artículos

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </header>
 <nav class="menu">
     <ul id='mobileMenu'>
-        <Li><a class='solo iniciando' href="#uno">Iniciando</a></Li>
-        <li><a class='solo video' href="#dos">Clases en vídeo</a></li>
-        <li><a class='solo libro' href="#tres">Libros y guías</a></li>
+        <Li><a class='solo iniciando' href="#iniciando">Iniciando</a></Li>
+        <li><a class='solo video' href="#video">Clases en vídeo</a></li>
+        <li><a class='solo libro' href="#libro">Libros y guías</a></li>
         <Li><a class='capitulo uno' href="#dos">Empezando con Github</a></Li>
             <ul>
                 <li><a class='tema' href="#tres">Crear una cuenta de Github</a></li>
@@ -38,12 +38,12 @@
                 <li><a class='tema' href="#">Identificarse como usuario</a></li>
                 <li><a class='tema' href="#">Vincular el ordenador con GitHub por SSH</a></li>
             </ul>
-        <li><a  class='oro' href="#">Resumen de comandos</a></li>
-<!--         <li class='solo ejercicio'><a href="#">Ejercicios prácticos</a></li> -->
+        <li><a  class='solo oro' href="#">Resumen de comandos</a></li>
+        <li><a  class='solo ejercicio' href="#">Ejercicios prácticos</a></li>
     </ul>
 </nav>
 <section>
-    <article id='uno'>
+    <article id='iniciando'>
         <div class="encabezado">
             <h2>
                 <span class='numero iniciando'></span>
@@ -56,10 +56,10 @@
             <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
         </div>
     </article>
-    <article id='dos'>
+    <article id='video'>
         <div class="encabezado">
             <h2>
-                <span class='numero'>1</span>
+                <span class='numero video'></span>
                 <span class="nombre">Clases en vídeo</span>
             </h2>
         </div>
@@ -87,10 +87,10 @@
             </div>
         </div>
     </article>
-    <article id='tres'>
+    <article id='libro'>
         <div class="encabezado">
             <h2>
-                <span class='numero'>3</span>
+                <span class='numero libro'></span>
                 <span class="nombre">Libros y guías</span>
             </h2>
         </div>
