Estilado final videos en todas las vistas

--- a/index.html
+++ b/index.html
@@ -69,21 +69,36 @@
                 <div class="contenedor">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <p>Introducción a Git + GitHub</p>
+                <div class="detalles">
+                   <p class="titulo">Introducción a Git + GitHub</p>
+                   <p class="resumen">Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
+                   <p class="autor">Miguel Nieva @mikenieva</p> 
+                   <p class="fecha">Publicado el 09/02/2013</p>
+                </div>
             </div>
 
             <div class="video">
                 <div class="contenedor">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <p>Git: Branches</p>
+                <div class="detalles">
+                   <p class="titulo">Git: Branches</p>
+                   <p class="resumen">Una clase especial dedicada a GitHub, Git y el comportamiento de los branches. Dirigida por Christian Van Der Henst y Miguel Nieva.</p>
+                   <p class="autor">Christian Van Der Henst @cvander - Miguel Nieva @mikenieva</p> 
+                   <p class="fecha">Publicado el 19/03/2013</p>
+                </div>
             </div>
 
             <div class="video">
                 <div class="contenedor">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <p>Colaboración con GitHub</p>
+                <div class="detalles">
+                   <p class="titulo">Colaboración con GitHub</p>
+                   <p class="resumen">En esta ocasión, complementando a los materiales de GIT dentro de la plataforma, vemos la forma de colaborar en los proyectos estudiantiles.</p>
+                   <p class="autor">Miguel Nieva @mikenieva</p> 
+                   <p class="fecha">Publicado el 14/05/2013</p>
+                </div>
             </div>
         </div>
     </article>
