Estilado final libros en todas las vistas

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                 <span class="nombre">Clases en vídeo</span>
             </h2>
         </div>
-        <div class="materiales">
-
+        <div class="materiales_video">
             <div class="video">
                 <div class="contenedor">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
@@ -76,7 +75,6 @@
                    <p class="fecha">Publicado el 09/02/2013</p>
                 </div>
             </div>
-
             <div class="video">
                 <div class="contenedor">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
@@ -88,7 +86,6 @@
                    <p class="fecha">Publicado el 19/03/2013</p>
                 </div>
             </div>
-
             <div class="video">
                 <div class="contenedor">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
@@ -109,21 +106,35 @@
                 <span class="nombre">Libros y guías</span>
             </h2>
         </div>
-        <div class="materiales">
-            <div class="libro">
-                <div class="contenedor">
-                    <a href="http://git-scm.com/book/es?codekitCB=406257843.239258" target='blanck'><img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git"></a>
+        <div class="materiales_libro">
+            <div class="libros">
+                <div class="grupo">Libros</div>
+                <div class="ejemplar">
+                    <div class="portada">
+                        <a href="http://git-scm.com/book/es?codekitCB=406257843.239258" target='blanck'><img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git"></a>
+                    </div>
+                    <div class="detalles">
+                       <p class="titulo">Pro Git</p>
+                       <p class="resumen"></p>
+                       <p class="autor">Scott Chacon</p> 
+                       <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p>
+                    </div>
                 </div>
-                <p>Por Git</p>
             </div>
-            <div class="libro">
-                <div class="contenedor">
-                    <a href="http://rogerdudler.github.io/git-guide/index.es.html" target='blanck'><img src="img/guia.png" alt="Git - La guía sencilla"></a>
+            <div class="guias">
+                <div class="grupo">Guías</div>
+                <div class="ejemplar">
+                    <div class="portada">
+                        <a href="http://rogerdudler.github.io/git-guide/index.es.html?codekitCB=407001770.571911" ><img src="img/guia.png" alt="Git - La guía sencilla"></a>
+                    </div>
+                    <div class="detalles">
+                       <p class="titulo">Git - La guía sencilla</p>
+                       <p class="resumen">Una guía sencilla para comenzar con Git sin complicaciones</p>
+                       <p class="autor">Roger Dudler</p> 
+                       <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p>
+                    </div>
                 </div>
-                <p>Git - La guía sencilla</p>
             </div>
-
-        </div>
     </article>
 </section>
 <div class="boton">
