Mejoras generales de estilo

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <div class="detalles">
                        <p class="titulo">Pro Git</p>
-                       <p class="resumen"></p>
+                       <p class="resumen">Un libro completo para combertirte en un ninja de Github.</p>
                        <p class="autor">Scott Chacon</p> 
                        <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p>
                     </div>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="detalles">
                        <p class="titulo">Git - La guía sencilla</p>
-                       <p class="resumen">Una guía sencilla para comenzar con Git sin complicaciones</p>
+                       <p class="resumen">Una guía sencilla para comenzar con Git sin complicaciones.</p>
                        <p class="autor">Roger Dudler</p> 
                        <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p>
                     </div>
