--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 <div id='inicio'></div>
-<header>
-    <a href="#"><img src="img/logo.png" alt="Logo"></a>
-    <h1>IniciaGit<br><small>Hacer un commit es como pegar un tiro</small></h1>
+<header data-stellar-background-ratio="0.4">
+    <a href="#"><img src="img/logo2.png" alt="Logo"></a>
+    <img class='hero' src="img/hero.jpg">
+    <h1>IniciaGit<small>Hacer un commit es como pegar un tiro</small></h1>
 </header>
-<nav class="menu">
+<nav class="menu tope">
     <ul id='mobileMenu'>
         <Li><a class='solo iniciando' href="#iniciando">Iniciando</a></Li>
         <li><a class='solo video' href="#video">Clases en vídeo</a></li>
@@ -154,7 +155,17 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
+<script src="js/vendor/jquery.stellar.js"></script>
 <script src="js/main.js"></script>
+
+        <script>
+        $(function(){
+            $.stellar({
+                horizontalScrolling: false,
+                verticalOffset: 170
+            });
+        });
+        </script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
