Videos funcionando perfecto en todas las vistas
Añadido target='blanck' en los enlaces externos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="materiales_video">
             <div class="video">
                 <div class="contenedor">
-                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="detalles">
                    <p class="titulo">Introducción a Git + GitHub</p>
@@ -78,7 +78,7 @@
             </div>
             <div class="video">
                 <div class="contenedor">
-                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="detalles">
                    <p class="titulo">Git: Branches</p>
@@ -89,7 +89,7 @@
             </div>
             <div class="video">
                 <div class="contenedor">
-                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?showinfo=0&color=white&theme=light target='blanck'" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="detalles">
                    <p class="titulo">Colaboración con GitHub</p>
@@ -126,7 +126,7 @@
                 <div class="grupo">Guías</div>
                 <div class="ejemplar">
                     <div class="portada">
-                        <a href="http://rogerdudler.github.io/git-guide/index.es.html?codekitCB=407001770.571911" ><img src="img/guia.png" alt="Git - La guía sencilla"></a>
+                        <a href="http://rogerdudler.github.io/git-guide/index.es.html?codekitCB=407001770.571911" target='blanck'><img src="img/guia.png" alt="Git - La guía sencilla"></a>
                     </div>
                     <div class="detalles">
                        <p class="titulo">Git - La guía sencilla</p>
