--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
         <a class='email' href="mailto:jordipamies2@gmail.com"></a>
     </div>
 </footer>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
 <script src="js/plugins-ck.js"></script>
 <script src="js/main-ck.js"></script>
 
@@ -163,8 +162,10 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
   ga('create', 'UA-45274381-1', 'site88.net');
   ga('send', 'pageview');
+
 </script>
 </body>
 </html>
