Añadido degradado en hero en todas las vistas

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <img class='hero' src="img/hero.jpg">
     <h1>IniciaGit<small>Hacer un commit es como pegar un tiro</small></h1>
 </header>
+<div class="sombra"></div>
 <nav class="menu tope">
     <ul id='mobileMenu'>
         <Li><a class='solo iniciando' href="#iniciando">Iniciando</a></Li>
