Hero listo con cambio de logo

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         <a class='github' href="https://github.com/jpcpamies" target="_blank"></a>
         <a class='email' href="mailto:jordipamies2@gmail.com"></a>
     </div>
+    <p class='titulo'>IniciaGit<small>Hacer un commit es como pegar un tiro</small></p class='titulo'>
 </footer>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
 <script src="js/plugins-ck.js"></script>
