Ajustes de estilo en footer y hero

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 <footer id='footer'>
     <div class="avatar">
         <img src="img/avatar.jpg" width='160' height='160' alt="Jordi Pàmies">
-        <p><strong>Jordi Pàmies</strong></p>
+        <p>Jordi Pàmies</p>
     </div>
     <div class="social">
         <a class='twitter' href="https://twitter.com/jpcpamies" target="_blank"></a>
         <a class='github' href="https://github.com/jpcpamies" target="_blank"></a>
         <a class='email' href="mailto:jordipamies2@gmail.com"></a>
     </div>
-    <p class='titulo'>IniciaGit<small>Hacer un commit es como pegar un tiro</small></p class='titulo'>
+    <p class='titulo'>IniciaGit</p>
 </footer>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
 <script src="js/plugins-ck.js"></script>
