Cambio del hero

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <![endif]-->
 <div id='inicio'></div>
 <header data-stellar-background-ratio="0.4">
-    <a href="#"><img src="img/logo2.png" alt="Logo"></a>
-    <img class='hero' src="img/hero.jpg">
+    <a href="#"><img src="img/logo4.png" alt="Logo"></a>
+    <img class='hero' src="img/hero3.jpg">
     <h1>IniciaGit<small>Hacer un commit es como pegar un tiro</small></h1>
 </header>
 <div class="sombra"></div>
