Varias mejoras en peso de imagenes y detalles de estilo

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             </h2>
         </div>
         <div class="contenido">
+            <figure>
+                <img src="img/movil.png" alt="vista movil" class="movil" />
+                <img src="img/tablet.png" alt="vista tablet" class="tablet" />
+                <img src="img/laptop.png" alt="vista escritorio" class="laptop" />
+            </figure>
             <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
             <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
             <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
@@ -144,7 +149,7 @@
 </div>
 <footer id='footer'>
     <div class="avatar">
-        <img src="img/avatar.jpg" width='160' height='160' alt="Jordi Pàmies">
+        <img src="img/avatar.jpg" width='100' height='100' alt="Jordi Pàmies">
         <p>Jordi Pàmies</p>
     </div>
     <div class="social">
