Corregido error del menú movil

--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@
 </header>
 <div class="sombra"></div>
 <nav class="menu tope">
-    <ul id='mobileMenu'>
+    <ul class='mobileMenu'>
         <Li><a class='solo iniciando' href="#iniciando">Iniciando</a></Li>
         <li><a class='solo video' href="#video">Clases en vídeo</a></li>
         <li><a class='solo libro' href="#libro">Libros y guías</a></li>
-        <Li><a class='capitulo uno' href="#dos">Empezando con Github</a></Li>
+        <li><a class='solo oro' href="#">Resumen de comandos</a></li>
+        <Li><a class='capitulo uno' href="#dos">Empezando con Github</a>
             <ul>
                 <li><a class='tema' href="#tres">Crear una cuenta de Github</a></li>
                 <li><a class='tema' href="#cuatro">Instalar GitHub</a></li>
-                <li><a class='tema' href="#">Identificarse como usuario</a></li>
-                <li><a class='tema' href="#">Vincular el ordenador con GitHub por SSH</a></li>
+                <li><a class='tema' href="#cinco">Identificarse como usuario</a></li>
+                <li><a class='tema' href="#seis">Vincular el ordenador con GitHub por SSH</a></li>
             </ul>
-        <li><a  class='solo oro' href="#">Resumen de comandos</a></li>
-        <li><a  class='solo ejercicio' href="#">Ejercicios prácticos</a></li>
+        </li>
+        <li><a class='solo ejercicio' href="#">Ejercicios prácticos</a></li>
     </ul>
 </nav>
 <section>
