PUNTO DE RECUPERACIÓN

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </ul>
         </li>
         <li><a class='solo ejercicio' href="#">Ejercicios prácticos</a></li>
+        <li><a class='contacto' href="#footer">Contacto</a></li>
     </ul>
 </nav>
 <section>
@@ -124,7 +125,7 @@
                        <p class="titulo">Pro Git</p>
                        <p class="resumen">Un libro completo para combertirte en un ninja de Github.</p>
                        <p class="autor">Scott Chacon</p> 
-                       <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p>
+                       <!-- <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p> -->
                     </div>
                 </div>
             </div>
@@ -138,7 +139,7 @@
                        <p class="titulo">Git - La guía sencilla</p>
                        <p class="resumen">Una guía sencilla para comenzar con Git sin complicaciones.</p>
                        <p class="autor">Roger Dudler</p> 
-                       <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p>
+                       <!-- <p class="idioma"><img src="img/esp.jpg" alt="idioma español"></p> -->
                     </div>
                 </div>
             </div>
