--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
+<div id="fb-root"></div>
 <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 <div id='inicio'></div>
 <header data-stellar-background-ratio="0.4">
     <a href="#"><img src="img/logo.png" alt="Logo"></a>
-    <img class='hero' src="img/hero.jpg">
+    <img class='hero' src="img/hero.png">
     <h1>IniciaGit<small>Hacer un commit es como pegar un tiro</small></h1>
 </header>
 <div class="sombra"></div>
@@ -106,6 +107,12 @@
                 </div>
             </div>
         </div>
+        <div class="social">
+            <div class="compartir"></div>
+            <div class="comentario">
+                 <div id="disqus_thread"></div>
+            </div>
+        </div>
     </article>
     <article id='libro'>
         <div class="encabezado">
@@ -143,6 +150,12 @@
                     </div>
                 </div>
             </div>
+        <div class="social">
+            <div class="compartir"></div>
+            <div class="comentario">
+                 <div id="disqus_thread"></div>
+            </div>
+        </div>
     </article>
     <article id="comandos">
         <div class="encabezado">
@@ -152,7 +165,7 @@
             </h2>
         </div>
         <div class="contenido">
-             <h3><span>Instalar</span> GitHub</h3>
+            <h3><span>Instalar</span> GitHub</h3>
             <div class="comando">
                 <p class='enunciado_comando'>Comprueba que Github se ha instalado en el ordenador</p>
                 <pre>git —version</pre>
@@ -192,6 +205,12 @@
                 <pre>$cat id_rsa.pub</pre>
             </div>
             <div><a  class="instalar pdf" href="#">DESCARGAR EL PDF</a></div>
+        </div>
+        <div class="social">
+            <div class="compartir"></div>
+            <div class="comentario">
+                 <div id="disqus_thread"></div>
+            </div>
         </div>
     </article>
     <article id="empezando_con_github">
@@ -273,6 +292,12 @@
             </figure>
             <!--/ Terminal -->
             <p>Copia toda la llave desde "ssh-rsa" hasta el final.</p>
+        </div>
+        <div class="social">
+            <div class="compartir"></div>
+            <div class="comentario">
+                 <div id="disqus_thread"></div>
+            </div>
         </div>
     </article>
 
