Nuevo tema turquesa con cambio de logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="stylesheet" href="css/normalize.css" />
-    <link href='http://fonts.googleapis.com/css?family=Lobster|Raleway:400,700' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=BenchNine|Lobster|Raleway:400,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/estilos.css">
 
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -23,12 +23,10 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 <div id='inicio'></div>
-<header data-stellar-background-ratio="0.4">
+<header>
     <a href="#"><img src="img/logo.png" alt="Logo"></a>
-    <img class='hero' src="img/hero.png">
     <h1>IniciaGit<small>Hacer un commit es como pegar un tiro</small></h1>
 </header>
-<div class="sombra"></div>
 <nav class="menu tope">
     <ul class='mobileMenu'>
         <Li><a class='solo iniciando' href="#iniciando">Iniciando</a></Li>
@@ -51,7 +49,7 @@
         <div class="encabezado">
             <h2>
                 <span class='numero iniciando'></span>
-                <span class="nombre">Iniciando esto es la prueba de un titulo largo</span>
+                <span class="nombre">Iniciando</span>
             </h2>
         </div>
         <div class="contenido">
