Sistema completo de comentarios y botones sociales
En todas las vistas

--- a/index.html
+++ b/index.html
@@ -105,12 +105,6 @@
                 </div>
             </div>
         </div>
-        <div class="social">
-            <div class="compartir"></div>
-            <div class="comentario">
-                 <div id="disqus_thread"></div>
-            </div>
-        </div>
     </article>
     <article id='libro'>
         <div class="encabezado">
@@ -148,12 +142,6 @@
                     </div>
                 </div>
             </div>
-        <div class="social">
-            <div class="compartir"></div>
-            <div class="comentario">
-                 <div id="disqus_thread"></div>
-            </div>
-        </div>
     </article>
     <article id="comandos">
         <div class="encabezado">
@@ -205,7 +193,22 @@
             <div><a  class="instalar pdf" href="#">DESCARGAR EL PDF</a></div>
         </div>
         <div class="social">
-            <div class="compartir"></div>
+            <div class="consejos">
+                <ul>
+                    <li><a href="#video">Clases en vídeo</a></li>
+                    <li><a href="#libro">Libros y guías</a></li>
+                    <li><a href="#comandos">Resumen de comandos</a></li>
+                </ul>
+            </div>
+            <div class="compartir">
+                <p>Compártelo</p>
+                <div class="facebook">
+                    <div class="fb-like" data-href="http://asiestudio.site88.net/" data-width="50" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+                </div>
+                <div class="twitter">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://asiestudio.site88.net/" data-text="IniciaGit | Hacer un commit es como pegar un tiro" data-via="jpcpamies" data-lang="es">Twittear</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                </div>
+            </div>
             <div class="comentario">
                  <div id="disqus_thread"></div>
             </div>
@@ -292,7 +295,22 @@
             <p>Copia toda la llave desde "ssh-rsa" hasta el final.</p>
         </div>
         <div class="social">
-            <div class="compartir"></div>
+            <div class="consejos">
+                <ul>
+                    <li><a href="#video">Clases en vídeo</a></li>
+                    <li><a href="#libro">Libros y guías</a></li>
+                    <li><a href="#comandos">Resumen de comandos</a></li>
+                </ul>
+            </div>
+            <div class="compartir">
+                <p>Compártelo</p>
+                <div class="facebook">
+                    <div class="fb-like" data-href="http://asiestudio.site88.net/" data-width="50" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+                </div>
+                <div class="twitter">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://asiestudio.site88.net/" data-text="IniciaGit | Hacer un commit es como pegar un tiro" data-via="jpcpamies" data-lang="es">Twittear</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                </div>
+            </div>
             <div class="comentario">
                  <div id="disqus_thread"></div>
             </div>
@@ -318,7 +336,6 @@
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
 <script src="js/plugins-ck.js"></script>
 <script src="js/main-ck.js"></script>
-
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
